gke-gclb-misc/multicluster/mcs-green.yaml
# If you want to have different weights per target, they need different service names.
# Using the same whereami service name from the base-whereami.yaml on both clusters would be fine for an active-active deployment
apiVersion: v1
kind: Service
metadata:
  name: whereami-green
  namespace: test-gclb
spec:
  ports:
  - port: 80
    targetPort: 8080
    appProtocol: http
    name: http
  selector:
    app: whereami
  type: ClusterIP
