gke-gclb-misc/multicluster/mcg-gxlb-blue-green.yaml
# blue/green using gke-l7-global-external-managed-mc https://docs.cloud.google.com/kubernetes-engine/docs/how-to/deploy-external-multi-cluster-gateway
# mc gatewayclasses are only installed on config clusters. See https://docs.cloud.google.com/kubernetes-engine/docs/how-to/prepare-environment-multi-cluster-gateways 
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: mcg-gxlb-blue-green
  namespace: test-gclb
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: mcg-whereami-route
  namespace: test-gclb
spec:
  hostnames:
  - "whereami.example.com"
  parentRefs:
  - name: mcg-gxlb-blue-green
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /blue
    backendRefs:
      - group: net.gke.io
        kind: ServiceImport
        name: whereami-blue
        port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /green
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: whereami-green
      port: 80
  - backendRefs:
    # 100% of traffic to whereami-blue https://docs.cloud.google.com/kubernetes-engine/docs/how-to/deploy-gateway-traffic-splitting#traffic-split
    - name: whereami-blue
      group: net.gke.io
      kind: ServiceImport
      port: 80
      weight: 100
    # Start with 0% of traffic to whereami-green then ramp as needed (80/20, 50/50, 0/100)
    - name: whereami-green
      group: net.gke.io
      kind: ServiceImport
      port: 80
      weight: 0     # Will never recieve any traffic on this default match if set to zero, even if blue or both blue/green are unhealthy
